style.css
:root {
    --fw-thin: 300; 
    --fw-regular: 500; 
    --fw-semibold: 600 ;
    --fw-bold: 700;

    --w-side: 20px;

    --border-radius: 0.25rem;
}

body[data-darkmode="false"] {
    --color-text-1: hsl(0, 0%, 0%);
    --color-text-2: hsl(0, 0%, 31%);

    --color-bg-1: hsl(0, 0%, 97%);
    --color-bg-2: hsl(0, 0%, 75%);

    --color-border: hsl(0, 0%, 55%);
}

body[data-darkmode="true"] {
    --color-text-1: hsl(0, 0%, 95%);
    --color-text-2: hsl(210, 1%, 62%);

    --color-bg-1: hsl(0, 0%, 16%);
    --color-bg-2: hsl(217, 5%, 8%);

    --color-border: hsl(0, 0%, 47%);
}

* {
    padding: 0;
    margin: 0;
    color: var(--color-text-1);
    font-family: 'Inter', sans-serif;
    font-weight: var(--fw-regular);
}

html {
    color-scheme: dark;
    overflow-x: hidden;
}

html:has(body[data-darkmode=false]) {
    color-scheme: light;
}

body {
    background-color: var(--color-bg-2);
    height: 100vh;
    grid-template-rows: 4rem auto;
}

header {
    background-color: var(--color-bg-1);
    border-bottom: 1px solid var(--color-border);
    position: relative;
    z-index: 100;
}

header > div {
    margin-inline: var(--w-side);
    gap: 1rem;
}

header button {
    padding: 0.5rem 0.75rem;
    background-color: var(--color-bg-1);
    border: 1px solid var(--color-border);
    border-radius: var(--border-radius);
    gap: 0.5rem;
}

header button svg{
    height: 1rem;
    width: 1rem;
}

main{
    grid-template-columns: auto 33ch;
}

#cert-view svg {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: calc(100% - 4 * var(--w-side));
    width: calc(100% - 4 * var(--w-side));
    
}

#cert-view svg * [data-hover=true] {
    animation: blinking linear 1000ms;
    animation-iteration-count: infinite;
    cursor: pointer;
}

@keyframes blinking {
    0%      {opacity:   1;}
    50%     {opacity: 0.4;}
    100%    {opacity:   1;}
}

main > aside{
    background-color: var(--color-bg-1);
    box-sizing: border-box;
    padding-block: calc(2*var(--w-side));
    padding-inline: var(--w-side);
    font-size: 0.9rem;
    border-left: 1px solid var(--color-border);
}

main > aside > * {
    margin-block: .75rem;
}

main > aside label {
    color: var(--color-text-2);
}

aside hr {
    border-top: none;
    border-color: var(--color-border);
}

aside:has(#float-graphic) {
    justify-content: center;
    align-items: center;
}

#floating-start * {
    text-align: center;
}

#floating-start #float-graphic{
    width: 100%;
    height: fit-content;
    margin-bottom: 20px;
}

#floating-start #float-graphic #path0,
#floating-start #float-graphic #path2{
    opacity: 0.5;
}

#floating-start p{
    line-height: 1.4em;
    font-size: 0.95rem;
    color: var(--color-text-2);
    letter-spacing: 0.4px;
}


.field .label-margin {
    margin-block: .7rem;
}

.field input[type="text"],
.field input[type="number"],
.field input[type="color"],
.field textarea{
    box-sizing: border-box;
    padding: 0.5rem 0.5rem ;
    font-size: 0.9rem;
    border-radius: var(--border-radius);
    border: 1px solid var(--color-border);
    resize: vertical;
    min-height: 2.3rem;
    line-height: 1.3rem;
    background-color: var(--color-bg-1);
}

.field input[type="number"] {
    padding-right: 0.5rem;
}

.field input[type="color"] {
    padding: 0.2rem;
    cursor: pointer;
}

.field input:focus ,
.field textarea:focus {
    outline: 1px solid var(--color-text-2);
}

.w-6rem {
    width: 6rem;
}

#element-text {
    color: var(--color-text-2);
    margin-bottom: 2px;
}

#element-name {
    margin-top: 0;
    margin-bottom: 1rem;
}

.text-border {border: 1px solid red}


.field *[readonly],
.field *[readonly]:focus {
    outline: none;
    cursor: default;
}

.field:has(*[readonly]),
.field:has(*[readonly]:focus),
aside *[data-hide=true] {
    opacity: 0;
    display: hidden;
    height: 0;
    visibility: hidden;
    margin: 0;
}

